[PROD-6401] Reactions z-index corrections

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -257,6 +257,16 @@
 				background-color: $white;
 				border-radius: 50%;
 				padding: 2px;
+				position: relative;
+				z-index: 3;
+
+				&:nth-child(2) {
+					z-index: 2;
+				}
+
+				&:nth-child(3) {
+					z-index: 1;
+				}
 
 				+ .reactions_item {
 					margin-left: -4px;
